--- a/src/home-page-home/HomePageHome.css
+++ b/src/home-page-home/HomePageHome.css
@@ -1,8 +1,8 @@
-.BookList{
-    padding: 1rem;
+.HomePageHome{
+    padding: 20rem;
     margin-top: 2%;
     display: flex;
     justify-content: center;
     gap: 2rem;
-    flex-direction: column;
+    flex-direction: row;
 }
