--- a/src/loan-list/LoanList.css
+++ b/src/loan-list/LoanList.css
@@ -1,5 +1,5 @@
-.BookList{
-    padding: 1rem;
+.LoanList{
+    padding: 5rem;
     margin-top: 2%;
     display: flex;
     justify-content: center;
